# SSBRenderer_rework

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindSIMD.cmake  LinkerFlags.cmake  linker_flags.cmake  resources.cmake
docs/: CMakeLists.txt  ssb_short_reference.odt
src/: CMakeLists.txt
src/graphics/: CMakeLists.txt  blend.cpp  blur.cpp  config.h.in  flip.cpp  gutils.hpp  matrix.cpp  path.cpp  simd.cpp  simd.h  simd.hpp  text.cpp  text_unix.cpp  text_win.cpp  threadpool.hpp  threads.hpp
src/graphics/tests/: blurred.cpp  flipblend.cpp  path.cpp  text.cpp  tga.hpp  transform.cpp
src/parser/: CMakeLists.txt  SSBData.hpp  SSBParser.cpp  SSBParser.hpp  config.h.in  string_utils.hpp  utils.hpp
src/parser/tests/: minimal.cpp  simple.cpp
src/plugins/: CMakeLists.txt  FilterBase.hpp  aegisub.cpp  avisynth.cpp  config.hpp  csri.cpp  dshow.cpp  mediaf.cpp  vapoursynth.cpp  virtualdub.cpp
src/plugins/interfaces/: avisynth_c.h
src/plugins/interfaces/vd2/: vdvideofilt.h
src/plugins/tests/: csri_host.cpp  invert.cpp
src/renderer/: CMakeLists.txt  FilterBase.cpp  Geometry.cpp  Geometry.hpp  Overlay.hpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  config.h.in  fileinfo.rc  public.cpp  public.h  resources.rc  ssbrenderer.pc.in  vdub_resources.h
src/renderer/tests/: minimal.c
src/renderer_backend/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Renderer_cairo.cpp  Renderer_ogl.cpp
src/strings/: CMakeLists.txt  basic.hpp  utf8.hpp
src/strings/tests/: basic.cpp  utf8.cpp
src/utils/: CMakeLists.txt  io.hpp  memory.hpp  string.hpp  utf8.hpp
src/utils/tests/: io.cpp  memory.cpp  string.cpp
