# Setup documents installation
file(GLOB DOCUMENTS *)
foreach(document ${DOCUMENTS})
	if(IS_DIRECTORY ${document})
		install(DIRECTORY ${document} DESTINATION docs)
	elseif(NOT(${document} MATCHES "CMakeLists.txt$"))
		install(FILES ${document} DESTINATION docs)
	endif()
endforeach()
message(STATUS "Documents installation path: ${CMAKE_INSTALL_PREFIX}/docs")