# Setup documents installation
file(GLOB DOCUMENTS *)
foreach(document ${DOCUMENTS})
	if(IS_DIRECTORY ${document})
		install(DIRECTORY ${document} DESTINATION share/ssb-doc)
	elseif(NOT(${document} MATCHES "CMakeLists.txt$"))
		install(FILES ${document} DESTINATION share/ssb-doc)
	endif()
endforeach()
message(STATUS "Documents installation path: ${CMAKE_INSTALL_PREFIX}/docs")